plex/badwolf/plex-deployment.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
    tier: frontend
spec:
  selector:
    matchLabels:
      app: plex
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
        tier: frontend
    spec:
      containers:
        - image: plexinc/pms-docker:plexpass
          name: plex
          ports:
            - containerPort: 32400
              name: plex
          volumeMounts:
            - name: plexconfig
              mountPath: /config
            - name: plexmedia-symlinks
              mountPath: /media
            - name: koi-pond
              mountPath: /srv
      volumes:
        - name: plexconfig
          persistentVolumeClaim:
            claimName: plexvc
        - name: plexmedia-symlinks
          persistentVolumeClaim:
            claimName: plexmedia-symlinks
        - name: koi-pond
          persistentVolumeClaim:
            claimName: koi-pond
