plex/badwolf/plex-jnlp-old.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-jnlp
  namespace: plex
  labels:
    app: plex-jnlp
spec:
  selector:
    matchLabels:
      app: plex-jnlp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex-jnlp
    spec:
      containers:
        - image: khoyi/jnlp-slave:latest
          name: jnlp
          command: ["jenkins-slave", "-url", "http://192.168.77.2:8080", "-workDir=/home/jenkins/agent", "02781a4306f9d9cfe6b995212308fa802b0b0623a00010bae4d4e5af9463c1a5", "k8s-plex"]
          ports:
            - containerPort: 32400
              name: plex
          volumeMounts:
            - name: plexmedia-symlinks
              mountPath: /media
            - name: koi-pond
              mountPath: /srv/masters_koi-pond
            - name: rose-garden
              mountPath: /srv/masters_rose-garden
            - name: dragons-den
              mountPath: /srv/masters_dragons-den
            - name: donna-collection
              mountPath: /srv/masters_donna-collection
            - name: roger-roger
              mountPath: /srv/masters_roger-roger
            - name: legacy
              mountPath: /srv/nfs
      volumes:
        - name: plexmedia-symlinks
          persistentVolumeClaim:
            claimName: plexmedia-symlinks
            readOnly: false
        - name: koi-pond
          persistentVolumeClaim:
            claimName: koi-pond
            readOnly: false
        - name: rose-garden
          persistentVolumeClaim:
            claimName: rose-garden
            readOnly: false
        - name: dragons-den
          persistentVolumeClaim:
            claimName: dragons-den
            readOnly: false
        - name: donna-collection
          persistentVolumeClaim:
            claimName: donna-collection
            readOnly: false
        - name: roger-roger
          persistentVolumeClaim:
            claimName: roger-roger
            readOnly: false
        - name: legacy
          nfs:
            server: 192.168.77.2
            path: /srv/nfs
