plex/badwolf/plex-mediaserver.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
    tier: frontend
spec:
  selector:
    matchLabels:
      app: plex
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
        tier: frontend
    spec:
      containers:
        - image: plexinc/pms-docker:plexpass
          name: plex
          ports:
            - containerPort: 32400
              name: plex
          volumeMounts:
            - name: plexconfig
              mountPath: /config
            - name: plexbackups
              mountPath: /srv/backups
            - name: plexmedia-symlinks
              mountPath: /media
            - name: koi-pond
              mountPath: /srv/masters_koi-pond
            - name: rose-garden
              mountPath: /srv/masters_rose-garden
            - name: dragons-den
              mountPath: /srv/masters_dragons-den
            - name: donna-collection
              mountPath: /srv/masters_donna-collection
            - name: roger-roger
              mountPath: /srv/masters_roger-roger
      volumes:
        - name: plexconfig
          persistentVolumeClaim:
            claimName: plexconfig
        - name: plexbackups
          persistentVolumeClaim:
            claimName: plexbackups
            readOnly: false
        - name: plexmedia-symlinks
          persistentVolumeClaim:
            claimName: plexmedia-symlinks
            readOnly: false
        - name: koi-pond
          persistentVolumeClaim:
            claimName: koi-pond
            readOnly: true
        - name: rose-garden
          persistentVolumeClaim:
            claimName: rose-garden
            readOnly: true
        - name: dragons-den
          persistentVolumeClaim:
            claimName: dragons-den
            readOnly: true
        - name: donna-collection
          persistentVolumeClaim:
            claimName: donna-collection
            readOnly: true
        - name: roger-roger
          persistentVolumeClaim:
            claimName: roger-roger
            readOnly: true
