plex/badwolf/plex-samba.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-samba
  namespace: plex
  labels:
    app: plex-samba
spec:
  selector:
    matchLabels:
      app: plex-samba
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex-samba
    spec:
      containers:
        - image: dperson/samba:latest
          name: samba
          command: [ '-u', 'malkav;Change-me2d!;1001;1001', '-s', "srv;/srv;yes;no;no;malkav;malkav"]
          ports:
            - containerPort: 445
              name: samba
          volumeMounts:
            - name: plexbackups
              mountPath: /srv/backups
            - name: plexmedia-symlinks
              mountPath: /media
            - name: dvr
              mountPath: /srv/masters_DVR
            - name: koi-pond
              mountPath: /srv/masters_koi-pond
            - name: rose-garden
              mountPath: /srv/masters_rose-garden
            - name: dragons-den
              mountPath: /srv/masters_dragons-den
            - name: donna-collection
              mountPath: /srv/masters_donna-collection
            - name: roger-roger
              mountPath: /srv/masters_roger-roger
      volumes:
        - name: plexbackups
          persistentVolumeClaim:
            claimName: plexbackups
            readOnly: false
        - name: plexmedia-symlinks
          persistentVolumeClaim:
            claimName: plexmedia-symlinks
            readOnly: false
        - name: dvr
          persistentVolumeClaim:
            claimName: dvr
            readOnly: false
        - name: koi-pond
          persistentVolumeClaim:
            claimName: koi-pond
            readOnly: false
        - name: rose-garden
          persistentVolumeClaim:
            claimName: rose-garden
            readOnly: false
        - name: dragons-den
          persistentVolumeClaim:
            claimName: dragons-den
            readOnly: false
        - name: donna-collection
          persistentVolumeClaim:
            claimName: donna-collection
            readOnly: false
        - name: roger-roger
          persistentVolumeClaim:
            claimName: roger-roger
            readOnly: false
