plex/badwolf/plex-service.yaml


apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  ports:
    - name: plex-access
      nodePort: 32400
      port: 32400
      protocol: TCP
      targetPort: 32400
    - name: plex2
      nodePort: 32472
      port: 3005
      protocol: TCP
      targetPort: 3005
    - name: plex-roku
      nodePort: 32473
      port: 8324
      protocol: TCP
      targetPort: 8324
    - name: plex4-DLNA-tcp
      nodePort: 32469
      port: 32469
      protocol: TCP
      targetPort: 32469
    - name: plex-DLNA
      nodePort: 32475
      port: 1900
      protocol: UDP
      targetPort: 1900
    - name: plex10
      nodePort: 32410
      port: 32410
      protocol: UDP
      targetPort: 32410
    - name: plex12
      nodePort: 32412
      port: 32412
      protocol: UDP
      targetPort: 32412
    - name: plex13
      nodePort: 32413
      port: 32413
      protocol: UDP
      targetPort: 32413
    - name: plex14
      nodePort: 32414
      port: 32414
      protocol: UDP
      targetPort: 32414
  selector:
    app: plex
    tier: frontend
  type: NodePort
