plex/badwolf/plex-ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plex
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  #tls:
  #  - hosts:
  #      - plex.khoyi.io
  #    secretName: plex-cert
  rules:
    - host: plex.khoyi.io
      http:
        paths:
          - path: /
            backend:
              serviceName: plex
              servicePort: 32400
