plex/badwolf/plex-jnlp-networkpolicy.yaml

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
spec:
  podSelector:
    matchLabels:
      app: plex
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
